css/stylesheet.css
/* ... */
input:focus,
textarea:focus{
  outline: none;
  border-bottom: 2px solid var(--primary-color);
}

/* an input or textarea are in "focus" when they have been sulected and are ready for the input of text */


.form-control input:focus + label span,
.form-control input:valid + label span
{
  color: var(--primary-color);
  transform: translateY(-2rem);

}

.form-control textarea:focus + label span,
.form-control textarea:valid + label span
{
  color: var(--primary-color);
  transform: translateY(-3rem);
}

#submit {
  margin: 2rem 0;
  display: block;
  height: 3rem;
  width: 7rem;
  background-color: #efefef;
  border: 1px solid var(--text-color);
  border-radius: 2px;
}

#submit:hover{
  transform: scale(120%);
  color: var(--primary-color); 
  cursor: pointer;
  transition: transform 300ms ease;
  border-color: var(--primary-color);
}


/******
Galleries
*******/
.theatreGalleryWrap .grid > :first-child,
.galleryWrap .grid a:first-child{
  grid-column: 1/ span 2 ;
  grid-row: 1 / span 2;
}

.galleryWrap .grid a:nth-child(5){
  grid-column: 2/ span 2   ;
  height: 100%;
}
.galleryWrap .grid a:nth-child(7){
  grid-column: 2 / span 2 ;
  grid-row: 4  / span 2;
}
.galleryWrap .grid a:nth-child(10){
  grid-column: 1 / span 2 ;
  grid-row: 6  / span 2;
}
.galleryWrap .grid a:nth-child(12){
  grid-column: 2 / span 2 ;
  grid-row: 8  / span 2;
}
/* .galleryWrap .grid a:nth-child(15){ */
  /* grid-column: 1 / span 2 ;  */
  /* grid-row: 10  / span 2;  */
/* } */

.galleryWrap .grid a:nth-child(15){
  grid-column:1/span 2;
  grid-row:10 / span 2;
}

.galleryWrap .grid a:nth-child(16){
  grid-column: 2 / span 2 ; 
  grid-row: 12  / span 2; 
}
.galleryWrap .grid a:nth-child(17){
  grid-column: 3 / span 1 ; 
  grid-row: 10  / span 1; 
}
.galleryWrap .grid a:nth-child(18){
  grid-column: 3 / span 1 ; 
  grid-row: 11  / span 1; 
}
.galleryWrap .grid a:nth-child(19){
  grid-column: 1 / span 1 ; 
  grid-row: 13  / span 1; 
}
.galleryWrap .grid a:nth-child(20){
  grid-column: 1 / span 2 ; 
  grid-row: 15  / span 1; 
}

.theatreGalleryWrap .grid > :nth-child(5){
  grid-column: 2 /span 2;
  grid-row: 3 /span 2;
}
.theatreGalleryWrap .grid > :nth-child(8){
  grid-column: 1 /span 2;
  grid-row: 5 /span 2;
}

/* SOCIAL MATTERS GALLERY */

.socialGalleryWrap .grid a:first-child{
  grid-column: 1 /span 3;
  grid-row: 1 /span 1;
}
.socialGalleryWrap .grid a:nth-child(2){
  grid-column: 2 /span 2;
  grid-row: 2 /span 1;
}
.socialGalleryWrap .grid a:nth-child(3){
  grid-column: 1 /span 1;
  grid-row: 2 /span 1;
}
.socialGalleryWrap .grid a:nth-child(4){
  grid-column: 1 /span 2;
  grid-row: 3 /span ;
}
.socialGalleryWrap .grid a:nth-child(5){
  grid-column: 3 /span 1;
  grid-row: 3 /span 1;
}
.socialGalleryWrap .grid a:nth-child(6){
  grid-column: 2 /span 2;
  grid-row: 4/span 1;
}


.socialGalleryWrap .grid img,
.socialGalleryWrap .grid a,
.theatreGalleryWrap .grid img,
.theatreGalleryWrap .grid a,
.galleryWrap .grid img,
.galleryWrap .grid a{
  width: 100%;
  height: 100%;
}


/******
About
*******/

.aboutWrap .container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.blurb{
  padding-top: 2em;
}

/*****************
Margins and padding
*******************/

/* Margins */
.my-1{
  margin: 1rem 0;
}

.my-2{
  margin: 1.5rem 0;
}

.my-3{
  margin: 2rem 0;
}

.my-4{
  margin: 3rem 0;
}

.my-5{
  margin: 4rem 0;
}

.mx-1{
  margin: 0 1rem;
}

.mx-2{
  margin: 0 1.5rem;
}

.mx-3{
  margin: 0 2rem;
}

.mx-4{
  margin: 0 3rem;
}

.mx-5{
  margin: 0 4rem;
}

.m-1{
  margin: 1rem;
}

.m-2{
  margin: 1.5rem;
}

.m-3{
  margin: 2rem;
}

.m-4{
  margin: 3rem;
}

.m-5{
  margin: 4rem;
}

/* Padding */
.py-1{
  padding: 1rem 0;
}

.py-2{
  padding: 1.5rem 0;
}

.py-3{
  padding: 2rem 0;
}

.py-4{
  padding: 3rem 0;
}

.py-5{
  padding: 4rem 0;
}

.px-1{
  padding: 0 1rem;
}

.px-2{
  padding: 1 0.5rem;
}

.px-3{
  padding: 0 2rem;
}

.px-4{
  padding: 0 3rem;
}

.px-5{
  padding: 0 4rem;
}

.p-1{
  padding: 1rem;
}

.p-2{
  padding: 1.5rem;
}

.p-3{
  padding: 2rem;
}

.p-4{
  padding: 3rem;
}

.p-5{
  padding: 4rem;
}


/******
      Media Queries 
                ******/


@media(max-width: 399px){

    #picturasdeljohn {
      line-height: 1.2;
      text-align: center;
      margin-bottom: 0.8rem;
     
    }

}
/* ... */

